Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,7 +33,7 @@ steps:
     pytest
   displayName: 'pytest'
 
-- script: python src/example.py
+- script: python example.py
 
 - task: PythonScript@0
   inputs:
